# battery_limit

./: .gitignore  README.md  _git_diff.py  build_exe.py  check_imports.py  clean_gui.py  config.json  debug_login.py  debug_login3.py  debug_xiaomi2.py  examples.py  fix_gui.py  generate_icon.py  micloud_login_source.txt  patch_micloud.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.bat  run.sh  run_demo.py  run_production.py  setup.py  test_cloud.py  test_discover.py  test_login_fix.py  test_mdns.py  test_xiaomi_api.py  xiaomi_api_response.json  样式参考.jfif
%temp%/miio_wheel/: python_miio-0.5.12-py3-none-any.whl
src/: __init__.py  battery_auto_controller.py  battery_manager.py  config.py  gui.py  main.py  micloud_helper.py  mihome_controller.py
tests/: test_battery_manager.py
